[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/SoundFX/button_click_1.wav" type="AudioStream" id=1]
[ext_resource path="res://Assets/CharacterSprites/cursor_test.png" type="Texture" id=2]
[ext_resource path="res://Objects/UI/CursorArea.gd" type="Script" id=3]
[ext_resource path="res://Resources/Over Exit.tres" type="Animation" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 4 )

[sub_resource type="Animation" id=2]
resource_name = "Blank Cursor"
tracks/0/type = "value"
tracks/0/path = NodePath("CursorSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("CursorSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.0588235, 0.996078, 0.00392157, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("CursorSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0.0862745, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="CursorArea" type="Area2D"]
script = ExtResource( 3 )

[node name="CursorShape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="CursorSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[node name="CursorSprite" type="Sprite" parent="."]
position = Vector2( 16, 16 )
texture = ExtResource( 2 )

[node name="CursorAnimations" type="AnimationPlayer" parent="."]
"anims/Blank Cursor" = SubResource( 2 )
"anims/Over Character" = SubResource( 3 )
"anims/Over Clickable" = SubResource( 4 )
"anims/Over Exit" = ExtResource( 4 )

[connection signal="area_shape_entered" from="." to="." method="_on_CursorArea_area_shape_entered"]
[connection signal="area_shape_exited" from="." to="." method="_on_CursorArea_area_shape_exited"]
